--- a/style.css
+++ b/style.css
@@ -5,23 +5,28 @@ body{
     background-color: rgb(20, 20, 20);
     color:aliceblue;
     overflow: auto;
+    max-width: 100vw;
 }
 #header{
     height: 60px;
     width: 90%;
-    padding: 2vh 2vh 0;
+    padding: 2vh 2vh;
     display: flex;
     justify-content: space-between;
     margin:auto auto 10%;
+    border-bottom: 1px solid rgba(204, 204, 204, 0.5);
 }
-button[type='settings']{
+.header-text{
+}
+.settings-button{
     background-color: rgba(255, 255, 255, 0.1);
     color: aliceblue;
     border: none;
     border-radius: 5px;
-    height: fit-content;
     padding: 2%;
     box-sizing: border-box;
+    font-family: inherit;
+    font-weight: 500;
 }
 .container #timer{
     text-align: center;
@@ -39,7 +44,8 @@ button[type='settings']{
     justify-content: center;
     -webkit-box-align: center;
 }
-button[type="time-buttons"], button[type='start']{
+.focus-button, .short-break, .long-break{
+    text-align: center;
     color: inherit;
     border: none;
     padding: 2px 12px;
@@ -48,22 +54,28 @@ button[type="time-buttons"], button[type='start']{
     background: none;
 }
 .timer-display{
+    display: flex;
+    justify-content: center;
     font-size: 36px;
     background-color: rgba(255, 255, 255, 0.113);
-    margin: auto 40%;
+    margin: auto 1em;
     border-radius: 4px;
     text-align: center;
+    min-width: fit-content;
+    padding:2px 12px;
 }
 .start, .stop, .reset{
     font-size: 20px;
     padding: auto 12px;
     margin-top: 20px;
-    background-color: rgb(255, 255, 255);
-    color: rgba(20, 20, 20, 0.9);
+    background-color: rgb(255, 255, 255,.75);
+    opacity: 1;
+    color: rgba(20, 20, 20,);
     font-weight: 300px;
-    border-radius: 4px;
+    border-radius: 2px;
     height: fit-content;
     display: inline-flex;
     justify-content: space-between;
     border: none;
+    padding: 2px 12px;
 }
